# CUDA-gaussian-blur

./: .gitignore  CMakeLists.txt  README.md
cuda_module/: CMakeLists.txt
cuda_module/include/: convolution_kernel.h  gaussian_blur.h
cuda_module/src/: convolution_kernel.cu  gaussian_blur.cu
src/: main.cpp
